Revert all unnecessary changes